# ISA

./: .gitignore  CMakeLists.txt  Connection.cpp  Connection.h  ConnectionInterface.cpp  ConnectionInterface.h  Error.cpp  FileManipulator.cpp  FileManipulator.h  Makefile  ParseParameters.cpp  ParseParameters.h  ParseResponds.cpp  ParseResponds.h  README  README.md  TLSConnection.cpp  main.cpp  structures.h
src/: Connection.cpp  Connection.h  ConnectionInterface.cpp  ConnectionInterface.h  Error.cpp  Error.h  FileManipulator.cpp  FileManipulator.h  ParseParameters.cpp  TLSConnection.cpp  TLSConnection.h  main.cpp
